--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,36 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.TuCofradia2" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <!-- Base application theme. Theme.Material3.DayNight.NoActionBar-->
+    <style name="Base.Theme.TuCofradia2" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorSecondary">@color/secondary</item>
+        <item name="colorAccent">@color/accent</item>
+
+        <item name="android:fitsSystemWindows">true</item>
+        <item name="android:statusBarColor">@color/primary_dark</item>
+
+        <item name="android:actionBarStyle">@style/Toolbar</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+
+        <item name="android:textColorSecondary">@color/white</item>
     </style>
 
     <style name="Theme.TuCofradia2" parent="Base.Theme.TuCofradia2" />
+
+    <style name="Toolbar">
+        <item name="android:background">@color/primary</item>
+        <item name="titleTextColor">@color/white</item>
+    </style>
+
+    <style name="Title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="OverflowMenuTheme" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
+    </style>
+
 </resources>
