--- a/app/src/main/res/layout/main_view.xml
+++ b/app/src/main/res/layout/main_view.xml
@@ -12,6 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/main_toolbar_menu"
         app:popupTheme="@style/OverflowMenuTheme"/>
 
     <androidx.fragment.app.FragmentContainerView
