--- a/app/src/main/res/menu/main_drawer_menu.xml
+++ b/app/src/main/res/menu/main_drawer_menu.xml
@@ -5,15 +5,27 @@
     tools:showIn="navigation_view">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/homeFragment"
             android:icon="@drawable/ic_home"
             android:title="@string/home"
             android:checked="true"/>
         <item
-            android:id="@+id/nav_profile"
+            android:id="@+id/profileFragment"
             android:icon="@drawable/ic_profile"
             android:title="@string/profile"
             app:iconTint="@color/white"
+            app:showAsAction="ifRoom" />
+        <item
+            android:id="@+id/newsFragment"
+            android:icon="@drawable/ic_news"
+            android:title="@string/news"
+            app:iconTint="@color/white"
+            app:showAsAction="ifRoom" />
+        <item
+            android:id="@+id/settingsFragment"
+            android:icon="@drawable/ic_settings"
+            app:iconTint="@color/white"
+            android:title="@string/settings"
             app:showAsAction="ifRoom" />
     </group>
 </menu>
