--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
         <item name="colorSecondary">@color/secondary</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="android:colorBackground">@color/white</item>
 
         <item name="android:fitsSystemWindows">true</item>
         <item name="android:statusBarColor">@color/primary_dark</item>
@@ -18,17 +19,6 @@
     </style>
 
     <style name="Theme.TuCofradia2" parent="Base.Theme.TuCofradia2" />
-
-    <style name="Toolbar">
-        <item name="android:background">@color/primary</item>
-        <item name="titleTextColor">@color/white</item>
-    </style>
-
-    <style name="Title">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textStyle">bold</item>
-    </style>
 
     <style name="OverflowMenuTheme" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
     </style>
