--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,8 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:backgroundTint="@color/primary">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +79,7 @@
 
             <Button
                 android:id="@+id/btnLogin"
-                style="@style/Button"
+                style="@style/Button.Option"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/log" />
