--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,15 +15,36 @@
         <item name="android:textColor">@color/white_alpha</item>
     </style>
 
+    <style name="Subtitle" parent="Title">
+        <item name="android:padding">8dp</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Body">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="Button">
-        <item name="backgroundTint">@color/accent</item>
+        <item name="backgroundTint">@color/primary</item>
+        <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">8dp</item>
-        <item name="android:textColor">@color/primary</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:layout_margin">16dp</item>
         <item name="android:paddingTop">16dp</item>
         <item name="android:paddingBottom">16dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Button.Option">
+        <item name="backgroundTint">@color/accent</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:layout_margin">16dp</item>
+    </style>
+
+    <style name="Button.Option.Secondary">
+        <item name="backgroundTint">@color/secondary</item>
+<!--        <item name="android:textColor">@color/white</item>-->
     </style>
 
     <style name="Error">
@@ -64,6 +85,7 @@
 
     <style name="Card" parent="Padding">
         <item name="cardCornerRadius">16dp</item>
+        <item name="android:backgroundTint">@color/primary</item>
     </style>
 
     <style name="ActionButtonPadding">
