Add StoreData and finished auth

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -71,7 +71,7 @@
                 android:maxLength="30" />
 
             <CheckBox
-                android:id="@+id/checkBox"
+                android:id="@+id/cbRemember"
                 style="@style/Checkbox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
