Add AESCrypt and save password
Ahora se guarda el usuario y la password y al inicio se hace login

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.home.HomeFragment">
 
     <Button
-        android:id="@+id/btnPlay"
+        android:id="@+id/btnMyServers"
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
