--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,8 +42,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        tools:src="@drawable/ic_profile"
-                        app:tint="@color/white" />
+                        tools:src="@drawable/image_default_profile" />
 
                 </androidx.cardview.widget.CardView>
 
