--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemNews"
     style="@style/ViewRoot"
+    android:paddingVertical="16dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/primary_dark"
