--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,11 @@
 <!--        <item name="android:textColor">@color/white</item>-->
     </style>
 
+    <style name="Button.Action">
+        <item name="backgroundTint">@color/primary</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="Error">
         <item name="android:textColor">@color/primary</item>
         <item name="android:textSize">14sp</item>
@@ -79,6 +84,12 @@
     </style>
 
     <style name="EditText" parent="ListItem">
+        <item name="android:textColorHint">@color/white_alpha</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="SearchText">
         <item name="android:textColorHint">@color/white_alpha</item>
         <item name="android:backgroundTint">@color/white</item>
         <item name="android:textColor">@color/white</item>
