--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,8 +52,10 @@
     </style>
 
     <style name="Button.Action">
-        <item name="backgroundTint">@color/primary</item>
+        <item name="backgroundTint">@color/accent</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/primary</item>
+        <item name="android:layout_margin">8dp</item>
     </style>
 
     <style name="Error">
@@ -90,9 +92,9 @@
     </style>
 
     <style name="SearchText">
-        <item name="android:textColorHint">@color/white_alpha</item>
-        <item name="android:backgroundTint">@color/white</item>
-        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/primary</item>
+        <item name="android:backgroundTint">@color/primary_alpha</item>
+        <item name="android:textColor">@color/primary</item>
     </style>
 
     <style name="Checkbox" parent="ListItem">
