--- a/app/src/main/res/layout/fragment_server_list.xml
+++ b/app/src/main/res/layout/fragment_server_list.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/ViewRoot.RecycleView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    style="@style/ViewRoot.RecycleView"
     android:orientation="vertical"
     tools:context=".ui.serverList.ServerListFragment">
 
-    <EditText
-        android:id="@+id/etSearch"
+    <Button
+        android:id="@+id/btnFilters"
+        style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/SearchText"
-        android:hint="Nombre..."
-        />
-<!--TODO: Cambiar el HINT-->
+        android:layout_marginTop="16dp"
+        android:text="@string/filters" />
+
+    <!--TODO: Cambiar el HINT-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvServerList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        tools:listitem="@layout/item_join_server" />
+        tools:listitem="@layout/item_server" />
 
 </LinearLayout>
