Finished join servers list

--- a/app/src/main/res/layout/dialog_password_join_server.xml
+++ b/app/src/main/res/layout/dialog_password_join_server.xml
@@ -23,29 +23,19 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/etName"
-            style="@style/EditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            android:maxLines="1"
-            android:maxLength="40"
-            android:hint="@string/name" />
-
-        <EditText
-            android:id="@+id/etMessage"
+            android:id="@+id/etPassword"
             style="@style/EditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLength="255"
-            android:hint="@string/message" />
+            android:hint="@string/password_hint" />
 
         <Button
-            android:id="@+id/btnSave"
+            android:id="@+id/btnJoin"
             style="@style/Button.Option"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/save" />
+            android:text="@string/join" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
