--- a/app/src/main/res/layout/fragment_server_list.xml
+++ b/app/src/main/res/layout/fragment_server_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.serverList.ServerListFragment">
+    tools:context=".ui.main.serverList.ServerListFragment">
 
     <Button
         android:id="@+id/btnFilters"
@@ -21,6 +21,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical"
-        tools:listitem="@layout/item_join_server" />
+        tools:listitem="@layout/item_server" />
 
 </LinearLayout>
