--- a/app/src/main/res/layout/item_server.xml
+++ b/app/src/main/res/layout/item_server.xml
@@ -67,5 +67,18 @@
         android:layout_width="match_parent"
         style="@style/Button.Action"
         android:text="@string/join"/>
+    <Button
+        android:id="@+id/btnEdit"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        style="@style/Button.Action"
+        android:text="@string/edit"/>
+
+    <Button
+        android:id="@+id/btnLeave"
+        style="@style/Button.Action.Secondary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/leave" />
 
 </LinearLayout>
