--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,23 @@
     style="@style/ViewRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.main.home.HomeFragment">
 
     <Button
-        android:id="@+id/btnPlay"
+        android:id="@+id/btnMyServers"
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/play" />
+        android:layout_marginBottom="16dp"
+        android:text="@string/my_servers" />
+
+    <Button
+        android:id="@+id/btnSearchServers"
+        style="@style/Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/search_servers" />
 
 </LinearLayout>
