--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,4 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".ui.GameActivity">
 
+    <include
+        android:id="@+id/game_view"
+        layout="@layout/game_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:id="@+id/bottomNavView"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/primary_dark"-->
+<!--        app:itemActiveIndicatorStyle="@null"-->
+<!--        app:itemIconTint="@color/bottom_nav_selector"-->
+<!--        app:itemRippleColor="@color/primary_accent"-->
+<!--        app:itemTextColor="@color/bottom_nav_selector"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:menu="@menu/bottom_menu" />-->
+
 </androidx.constraintlayout.widget.ConstraintLayout>
