--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -63,8 +63,8 @@
         android:label="@string/servers"
         tools:layout="@layout/fragment_server_list" >
         <action
-            android:id="@+id/action_serverListFragment_to_gameActivity"
-            app:destination="@id/gameActivity" />
+            android:id="@+id/action_serverListFragment_to_createGuildFragment"
+            app:destination="@id/createGuildFragment" />
     </fragment>
     <activity
         android:id="@+id/gameActivity"
@@ -76,19 +76,27 @@
         android:name="com.devgalan.tucofradia2.ui.main.myServers.MyServersFragment"
         android:label="@string/my_servers" >
         <action
-            android:id="@+id/action_myServersFragment_to_gameActivity"
-            app:destination="@id/gameActivity" />
-        <action
             android:id="@+id/action_myServersFragment_to_createServerFragment"
             app:destination="@id/createServerFragment" />
+        <action
+            android:id="@+id/action_myServersFragment_to_createGuildFragment"
+            app:destination="@id/createGuildFragment" />
     </fragment>
     <fragment
         android:id="@+id/createServerFragment"
         android:name="com.devgalan.tucofradia2.ui.main.createServer.CreateServerFragment"
         android:label="@string/create_server" >
         <action
-            android:id="@+id/action_createServerFragment_to_gameActivity"
-            app:destination="@id/gameActivity"
-            app:popUpTo="@id/myServersFragment" />
+            android:id="@+id/action_createServerFragment_to_createGuildFragment"
+            app:destination="@id/createGuildFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/createGuildFragment"
+        android:name="com.devgalan.tucofradia2.ui.game.createGuild.CreateGuildFragment"
+        android:label="fragment_create_guild"
+        tools:layout="@layout/fragment_create_guild" >
+        <action
+            android:id="@+id/action_createGuildFragment_to_gameActivity"
+            app:destination="@id/gameActivity" />
     </fragment>
 </navigation>
